@@ -30,7 +30,6 @@ public class Labyrinth {
 
                 // Zeigt das Menü und liest die gewählte Schwierigkeit vom Benutzer.
                 Difficulty difficulty = MenuScreen.showMenu();
-                System.out.println(difficulty);
 
                 // Definiert Standardgröße des Spielfelds (inkl. Rand).
                 int width = 20;
@@ -41,19 +40,17 @@ public class Labyrinth {
 
                 // Anpassung der Größe (+ Pixelgröße) für den "SECRET"-Schwierigkeitsgrad.
                 if (difficulty == Difficulty.SECRET) {
-                    width = 29;
-                    height = 29;
+                    width = 33;
+                    height = 33;
                     fieldDimensions.setSize(25, 25);
                 }
 
                 // Erstellt das Spielfeld-Model mit angegebener Größe und Schwierigkeitsgrad.
                 Board board = new Board(width, height, difficulty);
 
-
-
                 // Ermittelt Startposition(en) des Spielers und erstelle Spieler.
                 ArrayList<Coordinates> starts = board.getIndexForFieldType(Field.START);
-                Player player = new Player(starts.get(0).getXCoordinate(), starts.get(0).getYCoordinate(), "./src/LabyrinthPerson_v3/resources/player");
+                Player player = new Player(starts.getFirst().getXCoordinate(), starts.getFirst().getYCoordinate(), "./src/LabyrinthPerson_v3/resources/player");
 
                 // Erstellt den Spielzustand mit initialem Punktestand 0.
                 GameState gameState = new GameState(0, board, player, difficulty);
@@ -62,7 +59,8 @@ public class Labyrinth {
                 GraphicView gview = new GraphicView(
                         width * fieldDimensions.width,
                         height * fieldDimensions.height,
-                        fieldDimensions);
+                        fieldDimensions,
+                        gameState);
                 gameState.registerView(gview);
                 gview.setVisible(true);
 
